[package]
name = "actix-mqtt-client"
version = "0.4.1"
authors = ["Syndim <im@syndim.org>"]
edition = "2018"
repository = "https://github.com/Syndim/actix-mqtt-client"
description = "A MQTT client based on the actix framework"
license = "MIT"
documentation = "https://docs.rs/actix-mqtt-client/"

[dependencies]
actix = "0.9"
log = "0.4"
futures = "0.3"
lazy_static = "1.4"
rand = "0.7"

[dependencies.tokio]
version = "0.2"
features = ["tcp"]

[dependencies.mqtt-protocol]
version = "0.8"
features = ["async"]

[dev-dependencies]
env_logger = "0.7"
rand = "0.7"
