[package]
name = "actix-mqtt-client"
version = "0.5.0"
authors = ["Syndim <im@syndim.org>"]
edition = "2018"
repository = "https://github.com/Syndim/actix-mqtt-client"
description = "A MQTT client based on the actix framework"
license = "MIT"
documentation = "https://docs.rs/actix-mqtt-client/"

[dependencies]
actix = "0.10"
log = "0.4"
futures = "0.3"
lazy_static = "1.4"
rand = "0.7"

[dependencies.tokio]
version = "0.3"
features = ["net", "io-util", "time"]

[dependencies.mqtt-protocol]
version = "0.9"
features = ["async"]

[dev-dependencies]
env_logger = "0.8"
