[package]
name = "actix-mqtt-client"
version = "0.5.0"
authors = ["Syndim <im@syndim.org>"]
edition = "2018"
repository = "https://github.com/Syndim/actix-mqtt-client"
description = "A MQTT client based on the actix framework"
license = "MIT"
documentation = "https://docs.rs/actix-mqtt-client/"

[dependencies]
actix = "0.12"
log = "0.4"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"

[dependencies.tokio]
version = "1.6"
features = ["net", "io-util", "time", "sync"]

[dependencies.mqtt-protocol]
version = "0.11"
features = ["tokio"]

[dev-dependencies]
env_logger = "0.8"
tokio-stream = "0.1"